# music-theory-analysis-py

./: .claude-setup-complete  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  coverage.json  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml
demo/: README.md  package-lock.json  package.json  run-demo.sh  setup-basic.sh  setup-full-with-tests.sh
demo/backend/: formatting.py  language.json  main.py  requirements.txt
demo/backend/app/: main.py
demo/e2e-tests/: ENHANCED_TESTING.md  package-lock.json  package.json  playwright.config.ts
demo/e2e-tests/playwright-report/: index.html
demo/e2e-tests/tests/data/: validated-test-cases.ts
demo/e2e-tests/tests/e2e/: chord-progression-validation.spec.ts  enhanced-analysis-validation.spec.ts  library-results-validation.spec.ts  melody-analysis-validation.spec.ts  scale-analysis-validation.spec.ts  ui-interactions-validation.spec.ts
demo/e2e-tests/tests/page-objects/: MusicTheoryAppPage.ts
demo/frontend/: package-lock.json  package.json
demo/frontend/public/: index.html
demo/frontend/src/: App.css  App.js
docs/: API_GUIDE.md  ARCHITECTURE.md  CONFIDENCE_CALIBRATION.md  DEVELOPMENT.md  MIGRATION_HISTORY.md  PYPI_SETUP.md  README.md  SUGGESTION_FRAMEWORK_PLAN.md  TESTING.md  TROUBLESHOOTING.md
examples/: README.md  harmonic_analysis_tutorial.ipynb
scripts/: README.md  confidence_calibration_analysis.py  export_test_failures.py  generate_comprehensive_multi_layer_tests.py  generate_test_data.py  music_expert_review.py  quality_check.py  setup_dev_env.py  validate_with_generated_data.py
src/harmonic_analysis/: __init__.py  __init__.py.old  analysis.py  chord_logic.py  comprehensive_analysis.py  enhanced_modal_analyzer.py  functional_harmony.py  modal_analysis.py  multiple_interpretation_service.py  scale_melody_analysis.py  types.py
src/harmonic_analysis/core/: __init__.py  chromatic_analysis.py  functional_harmony.py  modal_analysis.py
src/harmonic_analysis/services/: __init__.py  algorithmic_suggestion_engine.py  bidirectional_suggestion_engine.py  comprehensive_analysis.py  multiple_interpretation_service.py
src/harmonic_analysis/utils/: __init__.py  analysis_helpers.py  api_helpers.py  chord_logic.py  chord_parser.py  music_theory_constants.py  scales.py
src/music_theory_analysis/: __init__.py  chord_logic.py  chord_parser.py  chromatic_analysis.py  comprehensive_analysis.py  enhanced_modal_analyzer.py  functional_harmony.py  modal_analysis.py  multiple_interpretation_service.py  scales.py  types.py
tests/: conftest.py  edge_case_warnings.py  test_algorithmic_suggestions.py  test_bidirectional_integration.py  test_bidirectional_suggestions.py  test_chord_parser.py  test_chromatic_analysis.py  test_comprehensive_multi_layer_validation.py  test_edge_case_behavior.py  test_enhanced_modal_analyzer.py  test_evidence_type_consistency.py  test_modal_label_overwriting_bug.py  test_multi_layer_analysis.py  test_multiple_interpretation_service.py
tests/unit/: test_chord_logic.py  test_comprehensive_analysis.py
